# NYX-LLM-COMPARISON-AND-CODER-AGENT

./: .env.example  .gitignore  DESIGN.md  OPTIMIZATION_SUMMARY.md  README.md  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.mjs  index.html  metadata.json  nyx.db  nyx.db-shm  nyx.db-wal  package-lock.json  package.json  pyproject.toml  robots.txt  server.ts  sitemap.xml  tsconfig.json  vista-hello.html  vite.config.ts  vitest.config.ts
.github/agents/: react-ui-developer.agent.md
.github/workflows/: deploy.yml
.husky/: pre-commit
.stitch/: DESIGN.md
api/: index.ts
assets/: ModelRegistryView-QcIqoLgK.js  directClient-Cd1YvJZY.js  index-CT9EgGgW.css  index-DjHEz6fc.js  ollamaClient-BWYtnNrS.js  vendor-animation-CNnd97IV.js  vendor-icons-CuBsx8uk.js  vendor-lottie-CkkUgRuG.js
components/ui/: select.tsx
dist-electron/: main.cjs  preload.cjs
docs/: index.html
electron/: main.ts  preload.ts
electron/ipc/: dialog.ts  system.ts  vault.ts  window.ts
graphify-out/: extract.ps1  extract2.ps1  graph.html  sampleData.json  verify.ps1
scratch/: check_braces.js  check_sdk.ts  dashboard_top.txt  list_models.py  rebuild.tsx  validate_openrouter.ts
scripts/: install_local_node.ps1  pre-dev.cjs  unlock_and_npmci.ps1
server/lib/: cache.ts  (+16 more)
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  server_sidecar.rs  tray.rs
src-tauri/src/commands/: app.rs  dialog.rs  mod.rs  server.rs  system.rs  vault.rs  window.rs
(+214 files in other folders)
